--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 
 <body>
 
-    <h1>caderno</h1>
+    <header>
+        <h1>caderno</h1>
     <ul>
 
         <li>Escola</li>
         <li>Estudantes</li>
     </ul>
+    </header>
+    
 
 
 </body>
