--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <header>
+    <header class="cabecalho"> 
        <img class="cabecalho-imagem" src="alurastart logo 1.png" alt="Logo da alura Start">
         
     <ul>
