--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header class="cabecalho"> 
        <img class="cabecalho-imagem" src="alurastart logo 1.png" alt="Logo da alura Start">
         
-    <ul>
+    <ul class="cabecalho-lista">
 
-        <li>Escola</li>
-        <li>Estudantes</li>
+        <li class="cabecalho-lista-item">Escola</li>
+        <li class="cabechalho-lista-item">Estudantes</li>
     </ul>
     </header>
     
