--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
         <li class="cabechalho-lista-item">Estudantes</li>
     </ul>
     </header>
-    
+    <section class="escola">
+        <h2 class="escola-titulo">sobre a escola</h2>
+
+
+    </section>
 
 
 </body>
