--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </header>
     <section class="escola">
         <h2 class="escola-titulo">sobre a escola</h2>
-
-
+<p class="escola-texto-um"></p>
+<p class="escola-texto-dois"></p>
     </section>
 
 
