--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <h2 class="escola-titulo">sobre a escola</h2>
 <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação.</p>
 <p class="escola-texto-dois">A turma mais famosa é a Segunda Serie B. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mais que entrega excelentes resultados!</p>
-    </section>
-
+   <img class="escola-imagem" src="Formula-bro.png" alt="Professora no quadro.">
+</section>
 
 </body>
 
