--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
 
 <body>
 
-    <header class="cabecalho"> 
-       <img class="cabecalho-imagem" src="alurastart logo 1.png" alt="Logo da alura Start">
-        
-    <ul class="cabecalho-lista">
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="alurastart logo 1.png" alt="Logo da alura Start">
 
-        <li class="cabecalho-lista-item">Escola</li>
-        <li class="cabechalho-lista-item">Estudantes</li>
-    </ul>
+        <ul class="cabecalho-lista">
+
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabechalho-lista-item">Estudantes</li>
+        </ul>
     </header>
     <section class="escola">
         <h2 class="escola-titulo">sobre a escola</h2>
-<p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação.</p>
-<p class="escola-texto-dois">A turma mais famosa é a Segunda Serie B. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mais que entrega excelentes resultados!</p>
-   <img class="escola-imagem" src="Formula-bro.png" alt="Professora no quadro.">
-</section>
+        <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional
+            através da Programação.</p>
+        <p class="escola-texto-dois">A turma mais famosa é a Segunda Serie B. Uma turma diversa e engajada, as vezes, um
+            pouco bagunceira, mais que entrega excelentes resultados!</p>
+        <img class="escola-imagem" src="Formula-bro.png" alt="Professora no quadro.">
+    </section>
 
 </body>
 
