--- a/index.html
+++ b/index.html
@@ -6,35 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-</head>
+    <head>
 
-<body>
+    <body>
+            
+        <header class="cabecalho">
+            <img class="cabecalho-imagem" src="alurastart logo 1.png" alt="logo da alura Start">
 
-    <header class="cabecalho">
-        <img class="cabecalho-imagem" src="alurastart logo 1.png" alt="Logo da alura Start">
+            <ul class="cabecalho-lista">
+                <li class="cabecalho-lista-item">Escola</li>
+                <li class="cabecalho-lista-item">Estudante</li>
+               </ul>
+               </header>
 
-        <ul class="cabecalho-lista">
+               <section>
 
-            <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabechalho-lista-item">Estudantes</li>
-        </ul>
-    </header>
 
-    <section class="escola">
-        <div class="escola-div-conteudo">
+               </section class='Escola'>
+               <h2 class="escola-titulo">Sobre a Escola</h2>
+               <p class="escola-texto-um">
+                    A escola alura foi fundada em 2010  com o objetivo de ensinar
+                    pensamento computacional atravez de programacao
+               </p>
 
-            <h2 class="escola-titulo">sobre a escola</h2>
-            <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento
-                Computacional
-                através da Programação.</p>
+               <p class="escola-texto-dois">
+                    A turma mais famosa e a serie segundo A. Uma turma diversa e engajada,
+                    as vezes, um pouco bagunceira, mais que entrega excelentes resultados!
+               </p>
+               <img class="escola-imagem" src="Formula-amico 1.png" alt="Professor em frente de um quadro">
 
-            <p class="escola-texto-dois">A turma mais famosa é a Segunda Serie B. Uma turma diversa e engajada, as
-                vezes, um
-                pouco bagunceira, mais que entrega excelentes resultados!</p>
-        </div>
-        
-        <img class="escola-imagem" src="Formula-bro.png" alt="Professora no quadro.">
-    </section>
-</body>
+               </section>
+          </body>
 
-</html>
+          </html>
