--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <ul class="cabecalho-lista">
                 <li class="cabecalho-lista-item">Escola</li>
-                <li class="cabecalho-lista-item">Estudante</li>
+                <li class="cabecalho-lista-item">Estudantes</li>
                </ul>
                </header>
 
