--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
             </ul>
         </header>
 
-        <section>
 
 
-        </section class='escola'>
 
-        <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre a Escola</h2>
+        <section class='escola'>
 
-            <p class="escola-texto-um">
-                A escola alura foi fundada em 2010 com o objetivo de ensinar
-                pensamento computacional atravez de programacao
-            </p>
+            <div class="escola-div-conteudo">
+                <h2 class="escola-titulo">Sobre a Escola</h2>
+
+                <p class="escola-texto-um">
+                    A escola alura foi fundada em 2010 com o objetivo de ensinar
+                    pensamento computacional atravez de programacao
+                </p>
 
 
-            <p class="escola-texto-dois">
-                A turma mais famosa e a serie segundo A. Uma turma diversa e engajada,
-                as vezes, um pouco bagunceira, mais que entrega excelentes resultados!
-            </p>
-        </div>
+                <p class="escola-texto-dois">
+                    A turma mais famosa e a serie segundo A. Uma turma diversa e engajada,
+                    as vezes, um pouco bagunceira, mais que entrega excelentes resultados!
+                </p>
+            </div>
 
-        <img class="escola-imagem" src="Formula-amico 1.png" alt="Professor em frente de um quadro" </section>
+            <img class="escola-imagem" src="Formula-amico 1.png" alt="Professor em frente de um quadro" </section>
 
 <body>
 
