--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </div>
 
             <img class="escola-imagem" src="Formula-amico 1.png" alt="Professor em frente de um quadro" </section>
+        </section>
 
 <body>
 
