--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
         </header>
 
 
-
-
         <section class='escola'>
 
             <div class="escola-div-conteudo">
@@ -45,4 +43,5 @@
 
 <body>
 
+    margin: 24px 0;
 </html>
