--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-
     <head>
 
     <body>
 
         <header class="cabecalho">
-            <img class="cabecalho-imagem" src="alurastart logo 1.png" alt="logo da alura Start">
+            <img class="cabecalho-imagem" src="alurastart logo 1.png" alt="Logo da alura Start">
 
             <ul class="cabecalho-lista">
                 <li class="cabecalho-lista-item">Escola</li>
