--- a/index.html
+++ b/index.html
@@ -3,34 +3,44 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible"content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https:fonts.gstatic.com" crossorigin>
+    <link 
+     href="https://fonts.googleapis.com/css2?family=DM+Sans:ital, opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inconsolata:wght@200..900&family=Libre+Fr"
+     rel="stylesheet"
+
+
+
+
+
+
+
     <head>
 
     <body>
 
         <header class="cabecalho">
+
             <img class="cabecalho-imagem" src="alurastart logo 1.png" alt="Logo da alura Start">
 
             <ul class="cabecalho-lista">
                 <li class="cabecalho-lista-item">Escola</li>
                 <li class="cabecalho-lista-item">Estudantes</li>
+
             </ul>
+
         </header>
-
-
         <section class='escola'>
 
             <div class="escola-div-conteudo">
                 <h2 class="escola-titulo">Sobre a Escola</h2>
-
                 <p class="escola-texto-um">
                     A escola alura foi fundada em 2010 com o objetivo de ensinar
                     pensamento computacional atravez de programacao
                 </p>
-
 
                 <p class="escola-texto-dois">
                     A turma mais famosa e a serie segundo A. Uma turma diversa e engajada,
@@ -38,11 +48,19 @@
                 </p>
             </div>
 
-            <img class="escola-imagem" src="Formula-amico 1.png" alt="Professor em frente de um quadro" </section>
-        </section>
+            <img class="escola-imagem" src="Formula-amico 1.png" alt="Professor em frente de um quadro">
 
-<body>
+
+        </section>
+          <section class="ESTUDANTE">
+            <h2 class="estudante-titulo">Quem são os nossos estudantes?</h2>
+                 <img class="estudante-image" src="images.jpeg" alt="imagem do ursinho carinhosos">
+
+
+</section>
+
+    
+</body>
 
     
 
-</html>
