--- a/index.html
+++ b/index.html
@@ -52,9 +52,16 @@
 
 
         </section>
+
           <section class="ESTUDANTE">
             <h2 class="estudante-titulo">Quem são os nossos estudantes?</h2>
+            <div class="estudante-div">
                  <img class="estudante-image" src="images.jpeg" alt="imagem do ursinho carinhosos">
+                  <h3 class="estudante-nome">Maria</h3>
+
+                  <img class="estudante-icone" src="logo-do-fecebook.png" alt="logo-do-fecebook">
+                  <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
+                  <img class="estudante-icone" src="simbolo-do-intagram" alt="">
 
 
 </section>
