--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                   <img class="estudante-icone" src="logo-do-fecebook.png" alt="logo-do-fecebook">
                   <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
-                  <img class="estudante-icone" src="simbolo-do-intagram" alt="">
+                  <img class="estudante-icone" src="simbolo-do-intagram.png" alt="simbolo-do-instagram">
 
 
 </section>
