--- a/index.html
+++ b/index.html
@@ -49,11 +49,9 @@
             </div>
 
             <img class="escola-imagem" src="Formula-amico 1.png" alt="Professor em frente de um quadro">
+          </section>
 
-
-        </section>
-
-          <section class="ESTUDANTE">
+                 <section class="ESTUDANTE">
             <h2 class="estudante-titulo">Quem são os nossos estudantes?</h2>
             <div class="estudante-div">
                  <img class="estudante-image" src="images.jpeg" alt="imagem do ursinho carinhosos">
@@ -62,11 +60,9 @@
                   <img class="estudante-icone" src="logo-do-fecebook.png" alt="logo-do-fecebook">
                   <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
                   <img class="estudante-icone" src="simbolo-do-intagram.png" alt="simbolo-do-instagram">
+                   </div>
+                </section>
 
-
-</section>
-
-    
 </body>
 
 </html>
