--- a/index.html
+++ b/index.html
@@ -8,66 +8,55 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https:fonts.gstatic.com" crossorigin>
-    <link 
-     href="https://fonts.googleapis.com/css2?family=DM+Sans:ital, opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inconsolata:wght@200..900&family=Libre+Fr"
-     rel="stylesheet"
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital, opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inconsolata:wght@200..900&family=Libre+Fr"
+        rel="stylesheet" <head>
 
+<body>
 
+    <header class="cabecalho">
 
+        <img class="cabecalho-imagem" src="alurastart logo 1.png" alt="Logo da alura Start">
 
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudantes</li>
 
+        </ul>
 
+    </header>
+    <section class='escola'>
 
-    <head>
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <p class="escola-texto-um">
+                A escola alura foi fundada em 2010 com o objetivo de ensinar
+                pensamento computacional atravez de programacao
+            </p>
 
-    <body>
+            <p class="escola-texto-dois">
+                A turma mais famosa e a serie segundo A. Uma turma diversa e engajada,
+                as vezes, um pouco bagunceira, mais que entrega excelentes resultados!
+            </p>
+        </div>
 
-        <header class="cabecalho">
+        <img class="escola-imagem" src="Formula-amico 1.png" alt="Professor em frente de um quadro">
+    </section>
 
-            <img class="cabecalho-imagem" src="alurastart logo 1.png" alt="Logo da alura Start">
+    <section class="ESTUDANTE">
+        <h2 class="estudante-titulo">Quem são os nossos estudantes?</h2>
+        <div class="estudante-div">
+            <img class="estudante-image" src="images.jpeg" alt="imagem do ursinho carinhosos">
+            <h3 class="estudante-nome">Maria</h3>
 
-            <ul class="cabecalho-lista">
-                <li class="cabecalho-lista-item">Escola</li>
-                <li class="cabecalho-lista-item">Estudantes</li>
-
-            </ul>
-
-        </header>
-        <section class='escola'>
-
-            <div class="escola-div-conteudo">
-                <h2 class="escola-titulo">Sobre a Escola</h2>
-                <p class="escola-texto-um">
-                    A escola alura foi fundada em 2010 com o objetivo de ensinar
-                    pensamento computacional atravez de programacao
-                </p>
-
-                <p class="escola-texto-dois">
-                    A turma mais famosa e a serie segundo A. Uma turma diversa e engajada,
-                    as vezes, um pouco bagunceira, mais que entrega excelentes resultados!
-                </p>
-            </div>
-
-            <img class="escola-imagem" src="Formula-amico 1.png" alt="Professor em frente de um quadro">
-          </section>
-
-                 <section class="ESTUDANTE">
-            <h2 class="estudante-titulo">Quem são os nossos estudantes?</h2>
-            <div class="estudante-div">
-                 <img class="estudante-image" src="images.jpeg" alt="imagem do ursinho carinhosos">
-                  <h3 class="estudante-nome">Maria</h3>
-
-                  <img class="estudante-icone" src="logo-do-fecebook.png" alt="logo-do-fecebook">
-                  <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
-                  <img class="estudante-icone" src="simbolo-do-intagram.png" alt="simbolo-do-instagram">
-                   </div>
-                </section>
+            <img class="estudante-icone" src="logo-do-fecebook.png" alt="logo-do-fecebook">
+            <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
+            <img class="estudante-icone" src="simbolo-do-intagram.png" alt="simbolo-do-instagram">
+        </div>
+    </section>
 
 </body>
 
 </html>
 
 </head>
-
-    
-
