--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital, opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inconsolata:wght@200..900&family=Libre+Fr"
         rel="stylesheet" <head>
 
-<body>
+<body>Sobre a Escola
+    A escola alura foi fundada em 2010 com o objetivo de ensinar pensamento computacional atravez de programacao
+    
+    A turma mais famosa e a serie segundo A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mais que entrega excelentes resultados!
 
     <header class="cabecalho">
 
