--- a/index.html
+++ b/index.html
@@ -2,64 +2,114 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https:fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital, opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inconsolata:wght@200..900&family=Libre+Fr"
-        rel="stylesheet" <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Document</title>
+<link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com"&gt;
+<link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap&quot; rel="stylesheet">
 
-<body>Sobre a Escola
-    A escola alura foi fundada em 2010 com o objetivo de ensinar pensamento computacional atravez de programacao
-    
-    A turma mais famosa e a serie segundo A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mais que entrega excelentes resultados!
 
-    <header class="cabecalho">
+</head>
 
-        <img class="cabecalho-imagem" src="alurastart logo 1.png" alt="Logo da alura Start">
+<body>
 
-        <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">Estudantes</li>
+<header class="cabecalho">
+<img class="cabecalho-imagem" src="alurastart logo 1.png" alt="Logo da alura Start">
 
-        </ul>
+<ul class="cabecalho-lista">
+<li class="cabecalho-lista-item"> Escola </li>
+<li class="cabecalho-lista-item"> Estudantes </li>
+</ul>
 
-    </header>
-    <section class='escola'>
+</header>
 
-        <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">
-                A escola alura foi fundada em 2010 com o objetivo de ensinar
-                pensamento computacional atravez de programacao
-            </p>
+<section class="escola">
 
-            <p class="escola-texto-dois">
-                A turma mais famosa e a serie segundo A. Uma turma diversa e engajada,
-                as vezes, um pouco bagunceira, mais que entrega excelentes resultados!
-            </p>
-        </div>
+<div class="escola-div-conteudo">
 
-        <img class="escola-imagem" src="Formula-amico 1.png" alt="Professor em frente de um quadro">
-    </section>
+<h2 class="escola-titulo"> Sobre a escola </h2>
+<p class="escola-texto-um">
+A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da
+Programação. A turma mais famosa é a Segunda Série A.
+</p>
+<p class="escola-texto-dois">
+Uma turma diversa e engajada, as vezes, um pouco
+bagunceira, mas que entrega excelentes resultados!
+</p>
+</div>
 
-    <section class="ESTUDANTE">
-        <h2 class="estudante-titulo">Quem são os nossos estudantes?</h2>
-        <div class="estudante-div">
-            <img class="estudante-image" src="images.jpeg" alt="imagem do ursinho carinhosos">
-            <h3 class="estudante-nome">Maria</h3>
+<img class="escola-imagem" src="Formula-amico 1 (1).png" alt=" Professor em frente de um quadro.">
 
-            <img class="estudante-icone" src="logo-do-fecebook.png" alt="logo-do-fecebook">
-            <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
-            <img class="estudante-icone" src="simbolo-do-intagram.png" alt="simbolo-do-instagram">
-        </div>
-    </section>
+</section>
+
+<section class="estudante">
+<h2 class="estudante-titulo"> Quem são os nossos estudantes?</h2>
+
+<div class="estudantes-todos">
+
+<div class="estudante-div">
+
+<img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
+<h3 class="estudante-nome">Gilmar</h3>
+
+<img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
+<img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
+<img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
+</div>
+
+
+
+<div class="estudante-div">
+
+<img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
+<h3 class="estudante-nome">Gilmar</h3>
+
+<img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
+<img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
+<img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
+</div>
+
+
+<div class="estudante-div">
+
+<img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
+<h3 class="estudante-nome">Gilmar</h3>
+
+<img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
+<img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
+<img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
+</div>
+
+
+
+<div class="estudante-div">
+
+<img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
+<h3 class="estudante-nome">Gilmar</h3>
+
+<img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
+<img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
+<img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
+</div>
+
+
+<div class="estudante-div">
+
+<img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
+<h3 class="estudante-nome">Gilmar</h3>
+
+<img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
+<img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
+<img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
+</div>
+
+
+</div>
+</section>
+
 
 </body>
 
 </html>
-
-</head>
