--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ bagunceira, mas que entrega excelentes resultados!
 <div class="estudante-div">
 
 <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
-<h3 class="estudante-nome">Gilmar</h3>
+<h3 class="estudante-nome">Maria</h3>
 
 <img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
 <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
@@ -64,7 +64,7 @@ bagunceira, mas que entrega excelentes resultados!
 <div class="estudante-div">
 
 <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
-<h3 class="estudante-nome">Gilmar</h3>
+<h3 class="estudante-nome">Maria</h3>
 
 <img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
 <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
@@ -75,7 +75,7 @@ bagunceira, mas que entrega excelentes resultados!
 <div class="estudante-div">
 
 <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
-<h3 class="estudante-nome">Gilmar</h3>
+<h3 class="estudante-nome">Maria</h3>
 
 <img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
 <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
@@ -87,7 +87,7 @@ bagunceira, mas que entrega excelentes resultados!
 <div class="estudante-div">
 
 <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
-<h3 class="estudante-nome">Gilmar</h3>
+<h3 class="estudante-nome">Maria</h3>
 
 <img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
 <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
